--- a/main.tex
+++ b/main.tex
@@ -353,11 +353,13 @@ which form a double layer over the thickness on the order of 5--10 \A.
 For the bulk and the interfacial systems,we calculated the correlation functions of the HB population, 
 and obtained the reaction rate constants with the HB formation and breakage. 
 To analyze the HB dynamics at interfaces, 
-we determined the instantaneous interface with Willard and Chandler's method based on spatial density, 
+we determined the Willard-Chandler instantaneous interface based on spatial density, 
 and proposed a statistical scheme based on the interfacial HB (IHB) population operator for the instantaneous interface.
 Combining this method with Interfacial Molecule Sampling (IMS), we can get more realistic HB dynamics for the water/vapor interface.
-The IHB method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
+This bombination of the two methods gives us a solution to the question of how thick the water/vapor interface is from the perspective
+of HB dynamics.
 %
+The IHB method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
 The difference between the HB dynamics in the first solvation shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
 at interfaces is not visible from the values of the HB relaxation time. 
 For the interface of alkaline iodide solutions, we also find that the cations does not alter the H-bonding network 
@@ -365,7 +367,7 @@ outside the first hydration shell of the cations themselves.
 Through the solvation shell HB (SHB) dynamics, we obtained that 
 the HB dynamics for the H-bonds between water molecules in the first and the second solvation shell are not sensitive to the ions' nature.
 In contrast, after we calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions, 
-We found that the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
+we found that the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
 
 Finally, the distribution of the number of H-bonds of a OH group at a given instantaneous interface promotes our understanding of the difference between the alkaline nitrate
 solution/vapor and the water/vapor interfaces. In particular, the ratio of free OH bonds for interfaces affects the decay rate of the reorientation relaxation of water
