--- a/example.bib
+++ b/example.bib
@@ -9264,6 +9264,96 @@ title = {{Watching hydrogen-bond dynamics in a $\beta$-turn by transient two-dim
 volume = {444},
 year = {2006}
 }
+@ARTICLE{ZhangWei16,
+author = {Zhang,Wei and Yu, Lian},
+title = {{Surface Diffusion of Polymer Glasses}},
+journal = {Macromolecules},
+year = {2016},
+volume = {49},
+number ={},
+pages = {731},
+abstract= {{ }}
+}
+@ARTICLE{HuXiaohu16,
+author = {Hu, Xiaohu and Hong,Liang and Smith, Micholas Dean and Neusius, Thomas and Cheng, Xiaolin and Smith, Jeremy C.},
+title = {{The Dynamics of Single Protein Molecules is Non-Equilibrium and Self-Similar over Thirteen Decades in Time}},
+journal = {Nature Phys.},
+year = {2016},
+volume = {12},
+number ={},
+pages = {171},
+abstract= {{ }}
+}
+@ARTICLE{ZhuL11,
+author = {Zhu, L. and Brian, C. W. and Swallen, S. F. and Straus, P. T. and Ediger, M. D. and Yu, L.},
+title = {{Surface Self-Diffusion of an Organic Glass}},
+journal = {Phys. Rev. Lett.},
+year = {2011},
+volume = {106},
+number ={25},
+pages = {256103},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
 @ARTICLE{,
 author = {},
 title = {{}},
