--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
 \documentclass[
 11pt, % The default document font size, options: 10pt, 11pt, 12pt
 %oneside, % Two side (alternating margins) for binding by default, uncomment to switch to one side
+ngerman,
 english, % ngerman for German
 singlespacing, % Single line spacing, alternatives: onehalfspacing or doublespacing
 %draft, % Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
@@ -199,18 +200,27 @@ headsepline, % Uncomment to get a line under the header
 
 \thesistitle{Structure, Dynamics and Vibrational Spectroscopy of Interfacial 
 Alkali Nitrate Aqueous Solutions from \abinitio Molecular Dynamics} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
+\thesistitleG{Struktur-, Dynamik- und Schwingungsspektroskopie von Alkaligrenzflächen
+Wässrige Nitratlösungen von \abinitio Molecular Dynamics} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
 \supervisor{Apl. Prof. Dr. Marialore \textsc{Sulpizi}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
-\examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
+\examiner{Apl. Prof. Dr. Marialore Sulpizi, Prof. Dr. Wittig, Prof. Dr. Palberg, Prof. Dr. Spiesberger} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
 \degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
+\degreeG{Doktor der Philosophie} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
 \author{Gang \textsc{Huang}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
 \addresses{} % Your address, this is not currently used anywhere in the template, print it elsewhere with \addressname
 
 \subject{Statistical Physics and Soft Matter} % Your subject area, this is not currently used anywhere in the template, print it elsewhere with \subjectname
+\subjectG{Statistische Physik und weiche Materie} % Your subject area, this is not currently used anywhere in the template, print it elsewhere with \subjectname
 \keywords{sum-frequency generation, hydrogen bond dynamics, water/vapor interfaces} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
-\university{\href{https://www.uni-mainz.de}{Johannes Gutenberg Universit\"at Mainz}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
+\keywordsG{Summenfrequenzerzeugung, Wasserstoffbrückendynamik, Wasser/Dampf-Grenzflächen} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
+\university{\href{https://www.uni-mainz.de}{Johannes Gutenberg University Mainz}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
+\universityG{\href{https://www.uni-mainz.de}{Johannes Gutenberg Universit\"at Mainz}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
 \department{\href{https://www.iph.uni-mainz.de}{Institute for Physics }} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
+\departmentG{\href{https://www.iph.uni-mainz.de}{Institut für Physik}} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
 \group{\href{https://www.komet1.physik.uni-mainz.de}{Condensed Matter Theory Group}} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
+\groupG{\href{https://www.komet1.physik.uni-mainz.de}{Gruppe zur Theorie der kondensierten Materie}} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
 \faculty{\href{https://www.komet1.physik.uni-mainz.de}{Condensed Matter Theory}} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
+\facultyG{\href{https://www.komet1.physik.uni-mainz.de}{Theorie der kondensierten Materie}} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
 
 \AtBeginDocument{
 \hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
@@ -219,6 +229,7 @@ Alkali Nitrate Aqueous Solutions from \abinitio Molecular Dynamics} % Your thesi
 }
 
 \DeclareUnicodeCharacter{2212}{-} % Minus sign (by Gang Huang)
+
 
 \begin{document}
 
@@ -320,25 +331,19 @@ Alkali Nitrate Aqueous Solutions from \abinitio Molecular Dynamics} % Your thesi
 The interfacial structure and dynamics of solutions containing alkaline nitrates have been studied by Density Functional Theory-based 
 Molecular Dynamics (DFTMD) simulations. In particular we have presented a detailed analysis of the Hydrogen Bond (HB) structure at the interface and 
 have calculated the interface vibrational spectra to provide a molecular interpretation of available experimental data.
-%
 When calculating the Vibrational Sum-Frequency Generation (VSFG) spectrum, 
 an approximation was used such that we can obtained the interface's nonlinear polarizability to 
 infrared incident light through the Velocity Auto-Correlation Function (VACF). 
 Based on the calculation of the Maximally-Localized Wannier Functions (MLWFs), the parameterization of the spatial gradient of the components of the dipole moment 
 and the polarization is realized. Therefore, the calculation of the correlation between the dipole moment and the polarization is 
 transformed into the calculation of the VACF.
-The theoretical value of the imaginary part of the nonlinear polarizability obtained by this method is the same as the experimental 
-Phase Sensitive Sum-Frequency Generation (PS-SFG) spectrum result.
 
+%
 As a first system we have analyzed the behaviour of an aqueous interface containing LiNO$_3$.
 Both the measured and calculated VSFG spectra shows a reduced intensity in the lower frequency portion,
 when compared to the water/vapor interface.
 This reduction is attributed to the Hydrogen (H-) bonds established between the \nitrate and the surrounding water molecules at the interface.
 This effects is only related to the presence of the \nitrate at the water surface and is not affected by the presence of alkali metal ions.
-%I have shown that although the \Li can reside relative close to the water surface, also forming a water mediated
-%ion pair with \nit, its effect on the VSFG spectrum is not visible. The water molecule which mediate the interaction
-%between the \nitrate and the \Li would produce a red-shifted peak in small water cluster, but its influence is not visible
-%neither in the VSFG spectra.
 We have shown that the use of simple models, such as small cluster is not suitable to reproduce the experimental spectra 
 and cannot provide a microscopic interpretation of the spectra.
 Realistic models of the interface are required to address the perturbation of the ion at the water surface.
@@ -358,22 +363,52 @@ and proposed a statistical scheme based on the interfacial HB (IHB) population o
 Combining this method with Interfacial Molecule Sampling (IMS), we can get more realistic HB dynamics for the water/vapor interface.
 This bombination of the two methods gives us a solution to the question of how thick the water/vapor interface is from the perspective
 of HB dynamics.
+
 %
 The IHB method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
-The difference between the HB dynamics in the first solvation shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
+The difference between the HB dynamics in the first solvation shell of \Li and that of nitrate-water Hydrogen (H-) bonds
 at interfaces is not visible from the values of the HB relaxation time. 
 For the interface of alkaline iodide solutions, we also find that the cations does not alter the H-bonding network 
-outside the first hydration shell of the cations themselves.
+outside the first solvation shell of the cations themselves.
 Through the solvation shell HB (SHB) dynamics, we obtained that 
 the HB dynamics for the H-bonds between water molecules in the first and the second solvation shell are not sensitive to the ions' nature.
-In contrast, after we calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions, 
-we found that the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
+In contrast, the reorientation dynamics for the water molecules in the first solvation shell of ions is significantly affected by the ions. 
 
-Finally, the distribution of the number of H-bonds of a OH group at a given instantaneous interface promotes our understanding of the difference between the alkaline nitrate
+%
+Finally, the distribution of the number of H-bonds per OH group at a given instantaneous interface promotes our understanding of the difference between the alkaline nitrate
 solution/vapor and the water/vapor interfaces. In particular, the ratio of free OH bonds for interfaces affects the decay rate of the reorientation relaxation of water
 molecules and the $\Im \chi^{(2)}$ spectrum of the alkaline nitrate interface.
 \end{abstract}
 
+%----------------------------------------------------------------------------------------
+%	ABSTRACT PAGE GERMAN
+%----------------------------------------------------------------------------------------
+{\selectlanguage{ngerman}
+\begin{extraAbstract}
+\addchaptertocentry{\abstractname} % Add the abstract to the table of contents
+Die Grenzflächenstruktur und -dynamik von Lösungen, die alkalische Nitrate enthalten, wurden durch Simulationen der auf Dichtefunktionaltheorie basierenden Molekulardynamik (DFTMD) untersucht. Insbesondere haben wir eine detaillierte Analyse der Wasserstoffbrücken(HB)-Struktur an der Grenzfläche vorgelegt und die Schwingungsspektren der Grenzfläche berechnet, um eine molekulare Interpretation der verfügbaren experimentellen Daten zu ermöglichen.
+
+Bei der Berechnung des Spektrums der Schwingungs-Summe-Frequenz-Generierung (VSFG) wurde eine Näherung verwendet, so dass wir die nichtlineare Polarisierbarkeit der Grenzfläche für infrarotes einfallendes Licht durch die Velocity Auto-Correlation Function (VACF) erhalten können. Basierend auf der Berechnung der Maximally-Localized Wannier Functions (MLWFs) erfolgt die Parametrisierung des räumlichen Gradienten der Komponenten des Dipolmoments und der Polarisation. Daher wird die Berechnung der Korrelation zwischen Dipolmoment und Polarisation in die Berechnung des VACF überführt.
+
+%
+Als erstes System haben wir das Verhalten einer wässrigen Grenzfläche mit LiNO$_3$ analysiert. Sowohl die gemessenen als auch die berechneten VSFG-Spektren zeigen eine reduzierte Intensität im unteren Frequenzbereich,
+im Vergleich zur Wasser/Dampf-Grenzfläche. Diese Reduktion wird den Wasserstoff-(H-)-Bindungen zugeschrieben, die zwischen dem Nitrat und den umgebenden Wassermolekülen an der Grenzfläche aufgebaut werden. Dieser Effekt hängt nur mit der Anwesenheit des Nitrats an der Wasseroberfläche zusammen und wird durch die Anwesenheit von Alkalimetallionen nicht beeinflusst. Wir haben gezeigt, dass die Verwendung einfacher Modelle, wie z. B. kleiner Cluster, nicht geeignet ist, die experimentellen Spektren zu reproduzieren und eine mikroskopische Interpretation der Spektren nicht liefern kann. Realistische Modelle der Grenzfläche sind erforderlich, um die Störung des Ions an der Wasseroberfläche zu berücksichtigen.
+
+%
+Aus den Ergebnissen nichtlinearer Suszeptibilitäten schließen wir, dass Wassermoleküle an den Grenzflächen von LiI-, NaI- und KI-Lösungen im Vergleich zu denen an der Wasser/Dampf-Grenzfläche an schwächeren H-Brücken beteiligt sind. Der Ursprung der Eigenschaften liegt in einer einzigartigen Verteilung von Jodidionen und Alkalimetallkationen, die eine Doppelschicht über die Dicke in der Größenordnung von 5--10 Angström bilden.
+
+%
+Für das Volumen- und Grenzflächensystem berechneten wir die Korrelationsfunktionen der HB-Population und erhielten die Reaktionsgeschwindigkeitskonstanten mit HB-Bildung und -Bruch. Um die HB-Dynamik an Grenzflächen zu analysieren, haben wir die Willard-Chandler-Momentan-Grenzfläche basierend auf der räumlichen Dichte bestimmt und ein statistisches Schema basierend auf dem Grenzflächen-HB (IHB)-Populationsoperator für die momentane Grenzfläche vorgeschlagen. Durch die Kombination dieser Methode mit Interfacial Molecule Sampling (IMS) können wir eine realistischere HB-Dynamik für die Wasser/Dampf-Grenzfläche erhalten. Diese Bombination der beiden Methoden gibt uns eine Lösung für die Frage, wie dick die Wasser/Dampf-Grenzfläche aus Sicht der HB-Dynamik ist.
+
+%
+Die IHB-Methode wird auch auf allgemeine Grenzflächensysteme, wie die Solvathüllen von Ionen in wässrigen Lösungen, erweitert. Der Unterschied zwischen der HB-Dynamik in der ersten Solvathülle von \Li und der von Nitrat-Wasser-Wasserstoff(H-)-Bindungen an Grenzflächen ist aus den Werten der HB-Relaxationszeit nicht ersichtlich. Für die Grenzfläche von alkalischen Iodidlösungen stellen wir außerdem fest, dass die Kationen das H-Brückennetzwerk außerhalb der ersten Solvathülle der Kationen selbst nicht verändern. Durch die HB (SHB)-Dynamik der Solvathülle haben wir festgestellt, dass die HB-Dynamik für die H-Brücken zwischen Wassermolekülen in der ersten und zweiten Solvathülle nicht empfindlich auf die Natur der Ionen reagiert. Im Gegensatz dazu wird die Umorientierungsdynamik für die Wassermoleküle in der ersten Solvathülle der Ionen durch die Ionen signifikant beeinflusst.
+
+%
+Schließlich fördert die Verteilung der Anzahl von H-Brücken pro OH-Gruppe an einer gegebenen momentanen Grenzfläche unser Verständnis des Unterschieds zwischen der alkalischen Nitratlösung/Dampf und der Wasser/Dampf-Grenzfläche. Insbesondere das Verhältnis der freien OH-Bindungen für Grenzflächen beeinflusst die Zerfallsrate der Reorientierungsrelaxation von Wassermolekülen und das $\Im\chi^{(2)}$-Spektrum der Alkalinitrat-Grenzfläche.
+
+\end{extraAbstract}
+}
+\selectlanguage{english}
 %----------------------------------------------------------------------------------------
 %	ACKNOWLEDGEMENTS
 %----------------------------------------------------------------------------------------
@@ -396,12 +431,13 @@ physics for leading me to the fundamental statistical physics and excellent lect
 %
 I thank Prof. Dr. Harvey Meyer at the institute for nuclear physics. 
 I feel very honored to be a teaching assistant in his quantum field theory course. I have benefited a lot from his wonderful teaching methods, exercises, and questions and answers with students in his class.
+%
+I thank Prof. Thomas Record Jr. in University of Wisconsin and Prof. Marie-Pierre Gaigeot in Universit{\'e} Pierre et Marie Curie for useful discussions.
 
 %
 I am grateful to R\'emi Khatib for helpful guidance on the programs for calculating the VSFG spectra. I thank Shuanhu Qi, Jiajia Zhou and Fei Yu for useful discussions. 
 I would like to thank Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha, 
 at the Institute for Physics, for their assistance.
-
 %
 I thank Astrid Chase and Daniela Reibel for their enthusiastic and patient help during my stay at the University of Mainz. Thanks to Andreas Nussbaumer  for providing technical support.
 
