--- a/example.bib
+++ b/example.bib
@@ -1,3 +1,24 @@
+@BOOK{Gibbs1928,
+  title = {The collected works of J. Willard Gibbs, Ph.D., LL.D., Volume 1,Thermodynamics},
+  publisher = {Longmans, Green and Co.},
+  year = {1928},
+  author = {J. Willard Gibbs},
+  address = {New York}
+}
+@BOOK{Martin04,
+  title = {Electronic structure},
+  publisher = {Cambridge University Press},
+  year = {2004},
+  author = {Martin,Richard M.},
+  address = {The Edinburgh building, Cambridge CB2 2RU, UK}
+}
+@BOOK{Adam1941,
+  title = {The physics and chemistry of surfaces},
+  publisher = {Oxford University Press},
+  year = {1941},
+  author = {Neil K. Adam},
+  address = {Humphrey Milford, London}
+}
 @BOOK{Ball2001,
   title = {Life's Matrix: A Biography of Water},
   publisher = {University of California Press},
@@ -429,7 +450,7 @@
     pages = {5156}
 }
 @ARTICLE{Bankura2014,
-    abstract = {{We have carried out first-principles Born–Oppenheimer molecular dynamics (BOMD) simulations of heavy water using density functional theory in conjunction with either empirical van der Waals (vdW) corrections or semilocal (van der Waals) exchange and correlation functionals. Specifically, gradient-corrected density functionals (BLYP), semiempirical vdW methods (BLYP-D2, BLYP-D3, PBE-D3, revPBE-D3), and vdW density functionals (DRSLL-PBE, DRSLL-optB88) are applied to evaluate their accuracy in describing the hydrogen-bonded network of heavy water. Ab initio trajectories are used to calculate structural and dynamical properties, with special emphasis on vibrational spectral diffusion and hydrogen bond dynamics. Our results show that inclusion of vdW interactions in DFT-GGA significantly affects the structure of liquid water and results in a faster diffusion. The combination of BLYP and revPBE functionals with the semiempirical vdW method of Grimme et al. [J. Chem. Phys.2010, 132, 154104] and modified B88 functionals with the semilocal correlation functional according to M. Dion et al. [Phys. Rev. Lett.2004, 92, 246401] provide the best agreement with experiments.}},
+    abstract = {{We have carried out first-principles Born-Oppenheimer molecular dynamics (BOMD) simulations of heavy water using density functional theory in conjunction with either empirical van der Waals (vdW) corrections or semilocal (van der Waals) exchange and correlation functionals. Specifically, gradient-corrected density functionals (BLYP), semiempirical vdW methods (BLYP-D2, BLYP-D3, PBE-D3, revPBE-D3), and vdW density functionals (DRSLL-PBE, DRSLL-optB88) are applied to evaluate their accuracy in describing the hydrogen-bonded network of heavy water. Ab initio trajectories are used to calculate structural and dynamical properties, with special emphasis on vibrational spectral diffusion and hydrogen bond dynamics. Our results show that inclusion of vdW interactions in DFT-GGA significantly affects the structure of liquid water and results in a faster diffusion. The combination of BLYP and revPBE functionals with the semiempirical vdW method of Grimme et al. [J. Chem. Phys.2010, 132, 154104] and modified B88 functionals with the semilocal correlation functional according to M. Dion et al. [Phys. Rev. Lett.2004, 92, 246401] provide the best agreement with experiments.}},
     author = {A. Bankura and A. Karmakar and V. Carnevale and A. Chandra and M. L. Klein},
     title = {{Structure, Dynamics, and Spectral Diffusion of Water from First-Principles Molecular Dynamics}},
     journal = {J. Phys. Chem. C},
@@ -900,6 +921,17 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     doi = {https://doi.org/10.1016/0269-7491(88)90184-4},
     url = {https://www.sciencedirect.com/science/article/pii/0269749188901844},
     abstract = {This review describes the more important features of the emission, chemistry, transport and deposition of pollutants involved in acid deposition. Global emissions, both natural and man-made, of sulphur and nitrogen oxides are discussed and examples of spatial distributions and trends over the last century presented. The more significant chemical and physical processes involved in the transformation of the primary emissions into their acidic end products are described, including a summary of the approximate timescales of the processes involved. Measurements and modelled calculations of spatial and temporal patterns in the deposition of acidic pollutants by both wet and dry pathways are presented.}
+}
+@article{Dang1993,
+author = {Dang,Liem X.  and Garrett,Bruce C. },
+title = {Photoelectron spectra of the hydrated iodine anion from molecular dynamics simulations},
+journal = {J. Chem. Phys.},
+volume = {99},
+number = {4},
+pages = {2972--2977},
+year = {1993},
+doi = {10.1063/1.465203},
+URL = {https://doi.org/10.1063/1.465203}
 }
 @ARTICLE{LXD03,
     author = {L. X. Dang},
@@ -9292,6 +9324,172 @@ year = {2011},
 volume = {106},
 number ={25},
 pages = {256103},
+abstract= {{ }}
+}
+@ARTICLE{Jarvis1968,
+author = {N. L. Jarvis and M. A. Scheiman},
+title = {{Surface potential of aqueous electrolyte solutions}},
+journal = {J. Phys. Chem.},
+year = {1968},
+volume = {72},
+number ={1},
+pages = {74},
+abstract= {{ }}
+}
+@ARTICLE{Langmuir1917,
+author = {I. Langmuir},
+title = {{The constitution and fundamental properties of solids and liquids. II. Liquids}},
+journal = {J. Am. Chem. Soc.},
+year = {1917},
+volume = {39},
+number ={},
+pages = {1848},
+abstract= {{ }}
+}
+@ARTICLE{Onsager1934,
+author = {Onsager,L. and Samaras, N. N. T.},
+title = {{The surface tension of Debye‐Hückel electrolytes}},
+journal = {J. Chem. Phys.},
+year = {1934},
+volume = {2},
+number ={},
+pages = {528},
+abstract= {{ }}
+}
+@ARTICLE{Levin01,
+author = {Levin, Y. and Flores-Mena, J. E.},
+title = {{Surface tension of strong electrolytes}},
+journal = {Europhys. Lett.},
+year = {2001},
+volume = {56},
+number ={2},
+pages = {187--192},
+abstract= {{ }}
+}
+@ARTICLE{Wagner1924,
+author = {Wagner, C},
+title = {{The surface tension of dilute solutions of electrolytes}},
+journal = {Phys. Z.},
+year = {1924},
+volume = {25},
+number ={},
+pages = {474},
+abstract= {{ }}
+}
+@ARTICLE{dosSantos10,
+author = {dosSantos, Alexandre P and Diehl, Alexandre and Levin, Yan},
+title = {{Surface tensions, surface potentials, and the Hofmeister series of electrolyte solutions}},
+journal = {Langmuir},
+year = {2010},
+volume = {26},
+number ={13},
+pages = {10778--10783},
+doi = {10.1021/la100604k},
+url = {https://doi.org/10.1021/la100604k},
+abstract= {{ }}
+}
+@ARTICLE{Levin09,
+author = {Levin,Yan and dos Santos, Alexandre P. and Diehl, Alexandre},
+title = {{Ions at the Air-water interface: An end to a hundred-year-old mystery?}},
+journal = {Phys. Rev. Lett.},
+year = {2009},
+volume = {103},
+number ={},
+pages = {257802},
+url = {https://doi.org/10.1103/PhysRevLett.103.257802},
+abstract= {{ }}
+}
+@article{Perera1991,
+author = {Perera,Lalith  and Berkowitz,Max L. },
+title = {Many‐body effects in molecular dynamics simulations of Na$^+$(H$_2$O)n and Cl$^-$(H$_2$O)n clusters},
+journal = {J. Chem. Phys.},
+volume = {95},
+number = {3},
+pages = {1954-1963},
+year = {1991},
+doi = {10.1063/1.460992},
+URL = {https://doi.org/10.1063/1.460992}
+}
+@article{Horinek07,
+  title = {Specific Ion Adsorption at Hydrophobic Solid Surfaces},
+  author = {Horinek, Dominik and Netz, Roland R.},
+  journal = {Phys. Rev. Lett.},
+  volume = {99},
+  issue = {22},
+  pages = {226104},
+  year = {2007},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.99.226104},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.99.226104}
+}
+@Article{Brown08,
+author ="Brown, Matthew A. and D’Auria, Raffaella and Kuo, I.-F. William and Krisch, Maria J. and Starr, David E. and Bluhm, Hendrik and Tobias, Douglas J. and Hemminger, John C.",
+title  ="Ion spatial distributions at the liquid-vapor interface of aqueous potassium fluoride solutions",
+journal  ="Phys. Chem. Chem. Phys.",
+year  ="2008",
+volume  ="10",
+issue  ="32",
+pages  ="4778-4784",
+publisher  ="The Royal Society of Chemistry",
+doi  ="10.1039/B807041E",
+url  ="http://dx.doi.org/10.1039/B807041E",
+abstract  ="X-Ray photoemission spectroscopy operating under ambient pressure conditions is used to probe ion distributions throughout the interfacial region of a free-flowing aqueous liquid micro-jet of 6 M potassium fluoride. Varying the energy of the ejected photoelectrons by carrying out experiments as a function of X-ray wavelength measures the composition of the aqueous–vapor interfacial region at various depths. The F− to K+ atomic ratio is equal to unity throughout the interfacial region to a depth of 2 nm. The experimental ion profiles are compared with the results of a classical molecular dynamics simulation of a 6 M aqueous KF solution employing polarizable potentials. The experimental results are in qualitative agreement with the simulations when integrated over an exponentially decaying probe depth characteristic of an APPES experiment. First principles molecular dynamics simulations have been used to calculate the potential of mean force for moving a fluoride anion across the air–water interface. The results show that the fluoride anion is repelled from the interface{,} consistent with the depletion of F− at the interface revealed by the APPES experiment and polarizable force field-based molecular dynamics simulation. Together{,} the APPES and MD simulation data provide a detailed description of the aqueous–vapor interface of alkali fluoride systems. This work offers the first direct observation of the ion distribution at an aqueous potassium fluoride solution interface. The current experimental results are compared to those previously obtained for saturated solutions of KBr and KI to underscore the strong difference in surface propensity between soft/large and hard/small halide ions in aqueous solution."}
+@article{Markovich1991,
+author = {Markovich,Gil  and Giniger,Rina  and Levin,Menachem  and Cheshnovsky,Ori },
+title = {Photoelectron spectroscopy of iodine anion solvated in water clusters},
+journal = {J. Chem. Phys.},
+volume = {95},
+number = {12},
+pages = {9416-9419},
+year = {1991},
+doi = {10.1063/1.461172},
+URL = { 
+        https://doi.org/10.1063/1.461172  
+}}
+@article {Ghosal05,
+	author = {Ghosal, Sutapa and Hemminger, John C. and Bluhm, Hendrik and Mun, Bongjin Simon and Hebenstreit, Eleonore L. D. and Ketteler, Guido and Ogletree, D. Frank and Requejo, Felix G. and Salmeron, Miquel},
+	title = {Electron Spectroscopy of Aqueous Solution Interfaces Reveals Surface Enhancement of Halides},
+	volume = {307},
+	number = {5709},
+	pages = {563--566},
+	year = {2005},
+	doi = {10.1126/science.1106525},
+	abstract = {It has been suggested that enhanced anion concentrations at the liquid/vapor interface of airborne saline droplets are important to aerosol reactions in the atmosphere. We report ionic concentrations in the surface of such solutions. Using x-ray photoelectron spectroscopy operating at near ambient pressure, we have measured the composition of the liquid/vapor interface for deliquesced samples of potassium bromide and potassium iodide. In both cases, the surface composition of the saturated solution is enhanced in the halide anion compared with the bulk of the solution. The enhancement of anion concentration is more dramatic for the larger, more polarizable iodide anion. By varying photoelectron kinetic energies, we have obtained depth profiles of the liquid/vapor interface. Our results are in good qualitative agreement with classical molecular dynamics simulations. Quantitative comparison between the experiments and the simulations indicates that the experimental results exhibit more interface enhancement than predicted theoretically.},
+	issn = {0036-8075},
+	URL = {https://science.sciencemag.org/content/307/5709/563},
+	journal = {Science}
+}
+@article {Garrett04,
+	author = {Garrett, Bruce C.},
+	title = {Ions at the Air/Water Interface},
+	volume = {303},
+	number = {5661},
+	pages = {1146--1147},
+	year = {2004},
+	doi = {10.1126/science.1089801},
+	issn = {0036-8075},
+	URL = {https://science.sciencemag.org/content/303/5661/1146},
+	journal = {Science}
+}
+@ARTICLE{Born1927,
+author = {Born, M. and Oppenheimer, J. R.},
+title = {{Zur Quantentheorie er Molekeln}},
+journal = {Ann. Physik},
+year = {1927},
+volume = {84},
+number ={},
+pages = {457},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
 abstract= {{ }}
 }
 @ARTICLE{,
