--- a/main.tex
+++ b/main.tex
@@ -640,7 +640,7 @@ $\nu$ & vibrational frequency; vibrational quantum number& \\
 %	DEDICATION
 %----------------------------------------------------------------------------------------
 
-\dedicatory{To my family.} 
+\dedicatory{To my parents.}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
