--- a/example.bib
+++ b/example.bib
@@ -1179,7 +1179,7 @@ URL = {https://doi.org/10.1063/1.464521},
 @ARTICLE{ZhangYanjie2006,
     author = {Y. Zhang and P. S Cremer},
     title = {{Interactions between Macromolecules and Ions: the Hofmeister Series}},
-    journal = {Current Opinion in Chemical Biology},
+    journal = {Curr. Opin. in Chem. Bio.},
     year = {2006},
     volume = {10},
     pages = {658}
@@ -2288,7 +2288,7 @@ abstract= {{ An exhaustive kinetic analysis has been carried out to offer the co
     doi = {10.1016/j.cocis.2004.05.028},
     url = {https://www.sciencedirect.com/science/article/pii/S1359029404000330},
     year = {2004},
-    journal = {Current Opinion in Colloid and Interface Science} 
+    journal = {Curr. Opin. Coll. Interface Sci.} 
 }
 @article{LV06,
     author = {L. Vrbka and J. Vondr\'{a}\u{s}ek and B. Jagoda-Cwiklik and R. V\'acha and P. Jungwirth},
@@ -5270,7 +5270,7 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
 @ARTICLE{YJZ06,
     author = {Y. Zhang and P. S Cremer},
     title = {{Interactions between macromolecules and ions: the Hofmeister series}},
-    journal = {Current Opinion in Chemical Biology},
+    journal = {Curr. Opin. Chem. Bio.},
     year = {2006},
     volume = {10},
     pages = {658}
@@ -6110,7 +6110,7 @@ title = {{Propensity of Soft Ions for the Air/Water Interface}},
 volume = {9},
 pages = {67-73},
 year = {2004},
-journal = {Current Opinion in Colloid and Interface Science} 
+journal = {Curr. Opin. Coll. Interface Sci.} 
 }
 @article{LV06,
 author = {L. Vrbka and J. Vondr\'{a}\u{s}ek and B. Jagoda-Cwiklik and R. V\'acha and P. Jungwirth},
@@ -8466,8 +8466,7 @@ volume = {9},
 pages = {19-37},
 year = {2004},
 doi = {},
-abstract ={},
-journal = {Current Opinion in Colloid and Interface Science} 
+journal = {Curr. Opin. Coll. Interface Sci.} 
 }
 @ARTICLE{DiTucci2018,
   author = {Matthew J. DiTucci and Christiane N. Stachl and Evan R. Williams},
@@ -8518,7 +8517,7 @@ year = {2004},
 doi = {10.1016/j.cocis.2004.05.028},
 abstract ={},
 URL = {https://www.sciencedirect.com/science/article/pii/S1359029404000330},
-journal = {Current Opinion in Colloid \& Interface Science} 
+journal = {Curr. Opin. Coll. Interface Sci.} 
 }
 @ARTICLE{FuHB15,
 title = "Photosensitized Production of Atmospherically Reactive Organic Compounds at the Air/Aqueous Interface",
@@ -8994,7 +8993,7 @@ year = {2010}
 @article{Vrbka2004,
 author = {Lubos Vrbka and Martin Mucha and Babak Minofar and Pavel Jungwirth and Eric C. Brown and Douglas J. Tobias},
 title = {Propensity of soft ions for the air/water interface},
-journal = {Current Opinion in Colloid \& Interface Science},
+journal = {Curr. Opin. Coll. Interface Sci.},
 volume = {9},
 number = {1},
 pages = {67-73},
@@ -9480,6 +9479,128 @@ year = {1927},
 volume = {84},
 number ={},
 pages = {457},
+abstract= {{ }}
+}
+@ARTICLE{Craig1993,
+author = {Craig,V. S. and Ninham, B. W. and Pashley, R. M.},
+title = {{Effects of electrolytes on bubble coalescence}},
+journal = {Nature},
+year = {1993},
+volume = {364},
+number ={},
+pages = {317},
+abstract= {{ }}
+}
+@ARTICLE{Craig1993b,
+author = {Craig, V. S. and Ninham, B. W. and Pashley, R. M.},
+title = {{The effects of electrolytes on bubble coalescence in water}},
+journal = {J. Phys. Chem.},
+year = {1993},
+volume = {97},
+number ={},
+pages = {10192--10197},
+abstract= {{ }}
+}
+@ARTICLE{Weissenborn1995,
+author = {Weissenborn, P. K. and Pugh, R. J.},
+title = {{Surface tension and bubble coalescence phenomena of aqueous solutions of electrolytes}},
+journal = {Langmuir},
+year = {1995},
+volume = {11},
+number ={5},
+pages = {1422-1426}
+}
+@ARTICLE{Marcelja04,
+author = {Mar{\v c}elja, S.},
+title = {{Short-range forces in surface and bubble interaction}},
+journal = {Curr. Opin. Colloid Interface Sci.},
+year = {2004},
+volume = {9},
+pages = {165}
+}
+@ARTICLE{Craig04,
+author = {Craig, V. S.},
+title = {{Bubble coalescence and specific-ion effects}},
+journal = {Curr. Opin. Colloid Interface Sci.},
+year = {2004},
+volume = {9},
+number ={},
+pages = {178}
+}
+@ARTICLE{Chang06,
+author = {Chang,Tsun-Mei and Dang, Liem X.},
+title = {{Recent advances in molecular simulations of ion solvation at liquid interfaces}},
+journal = {Chem. Rev.},
+year = {2006},
+volume = {106},
+number ={},
+pages = {1305--1322},
+doi= {10.1021/cr0403640},
+url= {https://doi.org/10.1021/cr0403640}
+}
+@ARTICLE{Franken1963,
+author = {Franken, P. A. and Ward, J. F.},
+title = {{Optical harmonics and nonlinear phenomena}},
+journal = {Rev. Mod. Phys.},
+year = {1963},
+volume = {35},
+number ={1},
+pages = {23},
+doi={},
+URL= {}
+}
+@ARTICLE{Shen2020,
+author = {Shen, Y. R.},
+title = {{Revisiting the basic theory of sum-frequency generation}},
+journal = {J. Chem. Phys.},
+year = {2020},
+volume = {153},
+number ={},
+pages = {180901},
+doi = {10.1063/5.0030947},
+url = {https://aip.scitation.org/doi/10.1063/5.0030947},
+abstract= {{ }}
+}
+@ARTICLE{Guyot-Sionnest1986,
+author = {Guyot-Sionnest, P. and Chen, W and Shen, Y. R.},
+title = {{General considerations on optical second-harmonic generation from surfaces and interfaces}},
+journal = {Phys. Rev. B},
+year = {1986},
+volume = {33},
+number = {},
+pages = {8254},
+doi = {10.1103/PhysRevB.33.8254}
+url = {https://journals.aps.org/prb/abstract/10.1103/PhysRevB.33.8254},
+abstract= {{}}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
 abstract= {{ }}
 }
 @ARTICLE{,
