--- a/main.tex
+++ b/main.tex
@@ -423,14 +423,15 @@ She is rigorous in academic studies, optimistic and active, and has a wide range
 All these have kept in my heart and gave me greater confidence in future scientific research work.
 
 %
-I am grateful to Prof. Dr. Kurt Binder and Prof. Dr. Friederike Schmid for their talks and guidance.
+I am grateful to Prof. Dr. Friederike Schmid  and Prof. Dr. Kurt Binder for their talks and guidance.
 I wish to thank Prof. Dr. Thomas Kühner, Dr. Giovanni Settanni, PD Dr. Peter
 Virnau, Dr. Hans Behringer and Prof. Dr. Thomas Speck at the institute for
 physics for leading me to the fundamental statistical physics and excellent lectures and discussions. 
 
 %
 I thank Prof. Dr. Harvey Meyer at the institute for nuclear physics. 
-I feel very honored to be a teaching assistant in his quantum field theory course. I have benefited a lot from his wonderful teaching methods, exercises, and questions and answers with students in his class.
+I feel very honored to be a teaching assistant in his quantum field theory course. 
+I have benefited a lot from his wonderful teaching methods, exercises, and questions and answers with students in his class.
 %
 I thank Prof. Thomas Record Jr. in University of Wisconsin and Prof. Marie-Pierre Gaigeot in Universit{\'e} Pierre et Marie Curie for useful discussions.
 
@@ -439,11 +440,11 @@ I am grateful to R\'emi Khatib for helpful guidance on the programs for calculat
 I would like to thank Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha, 
 at the Institute for Physics, for their assistance.
 %
-I thank Astrid Chase and Daniela Reibel for their enthusiastic and patient help during my stay at the University of Mainz. Thanks to Andreas Nussbaumer  for providing technical support.
+I thank Astrid Chase, Andreas Nussbaumer and Daniela Reibel for their enthusiastic and patient help during my stay at the University of Mainz. 
 
 %
 I thank Prof. Honggang Luo, Prof. Haiping Fang and Prof. Haijun Zhou for their great help in my study during my doctoral studies. 
-The cooperation and discussions with Guosheng Shi, Junming Shao, Bo Zhou and Chunlei Wang have benefited me a lot. 
+The cooperation and discussions with Dr. Guosheng Shi, Dr. Junming Shao, Dr. Bo Zhou and Dr. Chunlei Wang have benefited me a lot. 
 I express my sincere thanks to them.
 
 %
@@ -566,6 +567,7 @@ $V_{\text{ee}}$ & electron-electron repulsion energy & \\
 $T[n]$ & electronic kinetic energy & \\
 $E_{\text{disp}}^{(2)}$ & empirical two-body dispersion correction of energy & \\
 $E_{\text{disp}}^{(3)}$ & empirical three-body nonadditivity dispersion correction of energy & \\
+$E^{\text{XC}}[n]$ & Exchange correlation energy functional & \\
 $F$ & Farady constant &\\
 $\Delta F_{AB}$ & free energy difference between configuration A and B &  \\
 $F_A$ & free energy of configuration A &  \\
@@ -573,6 +575,7 @@ $L_{\eta\kappa}$ & Fresnel coefficients & \\
 $\omega_{\text{SFG}}$ & frequency of the sum-frequency generation beam & \\
 $\omega_{\text{vis}}$ & frequency of the incident visible beam &  \\
 $\omega_{\text{IR}}$ & frequency of the incident infrared beam &  \\
+$V_{\text{H}}$ & Hartree potential of electrons & \\
 $h(t)$ & HB population operator & \\
 $h^{(d)}(t)$ & HB population operator (it is 1 if the tagged pair are closer than $r_{\text{OO}}^{\text{c}}$)& \\
 $H(t)$ & HB population operator (continuously)& \\
@@ -587,6 +590,7 @@ $I_{\text{vis}}$ & intensity of the incident visible beam & \\
 $I_{\text{IR}}$ & intensity of the incident infrared beam & \\
 $r_{\text{OO}}$ & interoxygen distance & \\
 ${\delta}t$ & inverse sampling frequency & \\
+$E^{\text{KS}}[n]$ & Kohn-Sham energy functional & \\
 $\omega_{\text{e}}$ & the lowest electronic frequency &  \\
 $r_{\text{OO}}^{\text{c}}$ & the maximum value of the interoxygen distance (in the definition of HB) & \\
 $\phi^{\text{c}}$ & the maximum value of the angle between the O--O axis and one of the & \\
@@ -677,7 +681,8 @@ $\nu$ & vibrational frequency; vibrational quantum number& \\
 \include{chapters/chap_propensities/chap_propensities}
 \include{chapters/chap_thickness/chap_thickness}
 \include{chapters/chap_hbd/chap_hbd}
-%\include{chapters/chap_hkt/chap_hkt}
+%
+%%\include{chapters/chap_hkt/chap_hkt}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
